--- a/_posts/2023-10-16-excel.markdown
+++ b/_posts/2023-10-16-excel.markdown
@@ -27,7 +27,7 @@ Today, I'm thrilled to introduce a new tool I've been working on: the [Enhanced 
 3. **View and Interact**: The app will generate a bar chart based on your selection. Hover over the bars to get detailed insights.
 4. **Download**: With a single click, download the visualized data or the entire plot.
 
-[WATCH THE VIDEO HERE!<img src="https://raw.githubusercontent.com/Tarikul-Islam-Anik/Animated-Fluent-Emojis/master/Emojis/Hand%20gestures/Backhand%20Index%20Pointing%20Left%20Light%20Skin%20Tone.png" alt="Backhand Index Pointing Left Light Skin Tone" width="25" height="20" />](https://www.youtube.com/watch?v=k50l59vG77Y)
+[WATCH THE VIDEO HERE!](https://www.youtube.com/watch?v=k50l59vG77Y)
 
 
 
